--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -37,3 +37,17 @@ expoAutolinking.useExpoVersionCatalog()
 
 include ':app'
 includeBuild(expoAutolinking.reactNativeGradlePlugin)
+include ':expo-constants'
+project(':expo-constants').projectDir = new File(rootProject.projectDir, '../node_modules/expo-constants/android')
+
+include ':expo-file-system'
+project(':expo-file-system').projectDir = new File(rootProject.projectDir, '../node_modules/expo-file-system/android')
+
+include ':expo-linking'
+project(':expo-linking').projectDir = new File(rootProject.projectDir, '../node_modules/expo-linking/android')
+
+// Configurar autolinking
+def modulesAutolinking = new File(rootProject.projectDir, '../node_modules/expo-modules-autolinking/scripts/autolinking.gradle')
+if (modulesAutolinking.exists()) {
+    apply from: modulesAutolinking
+}
