--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,12 @@
         "buildType": "apk"
       }
     },
-    "production": {}
+    "production": {
+      "android": {
+        "buildType": "app-bundle"
+      },
+      "autoIncrement": true
+    }
   },
   "submit": {
     "production": {}
